--- a/faq/getting-started-faq/what-is-googletest-googlemock.mdx
+++ b/faq/getting-started-faq/what-is-googletest-googlemock.mdx
@@ -1,189 +1,172 @@
 ---
-title: "What is GoogleTest and GoogleMock?"
-description: "Explains the purpose and value of GoogleTest and GoogleMock, outlining their use as a unified, modern C++ testing framework with powerful mocking capabilities. Clarifies when and why developers should use these tools together."
+title: "What are GoogleTest and GoogleMock?"
+description: "An overview of GoogleTest and GoogleMock, highlighting their purpose, core features, and how they fit into modern C++ development. Summarizes benefits for both beginners and experienced developers."
 ---
 
-# What is GoogleTest and GoogleMock?
+# What are GoogleTest and GoogleMock?
 
-GoogleTest and GoogleMock together form a unified, modern C++ testing framework designed to help developers write robust, maintainable, and expressive tests. GoogleTest provides the core testing infrastructure with features such as automated test discovery, versatile assertions, test fixtures, parameterized tests, and support for cross-platform development. GoogleMock extends this framework by offering powerful mocking capabilities, enabling precise control over dependencies and interactions in your test code.
-
-This page explains the purpose, value, and typical use cases of GoogleTest and GoogleMock, clarifying why developers should consider using them together for comprehensive C++ testing.
+An overview of GoogleTest and GoogleMock, highlighting their purpose, core features, and how they fit into modern C++ development. This page summarizes the distinct roles these libraries play and the benefits they bring to both beginners and experienced developers.
 
 ---
 
 ## Introduction
 
-Developers write tests to verify the behavior of code under different conditions. However, complex software often depends on external modules or components that may be slow, unavailable, or difficult to control during testing. GoogleTest and GoogleMock address these challenges by:
+When developing C++ software, ensuring code correctness and design quality often hinges on automated testing and effective mocking. GoogleTest and GoogleMock together create a powerful framework ecosystem that addresses these needs seamlessly.
 
-- **GoogleTest:** Providing a flexible, xUnit-style framework for structuring and running tests.
-- **GoogleMock:** Allowing creation of mock classes that simulate real dependencies with controllable behaviors and expectations.
+- **GoogleTest**, often called `gtest`, is a comprehensive C++ testing framework providing rich macros and utilities to write, organize, and execute unit tests.
+- **GoogleMock**, or `gmock`, is an extension designed to facilitate the creation of mock objects in C++, enabling detailed specification and verification of object interactions.
 
-By using GoogleTest and GoogleMock, developers can isolate code under test, simulate complex interactions, verify call sequences, and produce clear, actionable test failures.
+Both come bundled under the GoogleTest project and integrate smoothly, enabling developers to write robust, maintainable, and expressive tests.
 
----
 
-## Purpose and Value of GoogleTest
+## What is GoogleTest?
 
-GoogleTest is Google's C++ testing framework. Its key capabilities include:
+GoogleTest is Google's open-source C++ testing framework that:
 
-- **Automated Test Discovery:** No manual registration needed. Tests registered via macros (`TEST()`, `TEST_F()`) are discovered and run automatically.
-- **Robust Assertions:** Provides a rich set of assertions for checking conditions, including boolean, equality, string, floating-point, predicate-based, and exception assertions.
-- **Test Fixtures:** Support grouping related tests with shared setup and teardown, improving readability and reducing duplication.
-- **Parameterized Tests:** Run the same test logic across multiple data combinations.
-- **Death Tests:** Verify program behavior under abnormal or error conditions.
-- **Cross-platform Support:** Works consistently across Linux, Windows, Mac, and other supported platforms.
+- Adopts the xUnit architecture, which users may recognize from other languages.
+- Offers a wide range of assertion macros to verify code behavior clearly and concisely.
+- Supports writing tests as functions (`TEST`) or as fixtures (`TEST_F`) to enable reusable setup/teardown.
+- Facilitates parameterized tests for running the same test with multiple inputs.
+- Provides clear and informative test outputs, including custom failure messages.
 
-Use GoogleTest when you want a reliable, well-supported way to write and manage your C++ tests, and benefit from structured, repeatable verification.
+**Use Case**: Developers use GoogleTest to verify the correctness of individual functions and classes by writing unit tests that assert expected values, states, or exceptions.
 
----
 
-## Purpose and Value of GoogleMock
+## What is GoogleMock?
 
-GoogleMock is a mocking framework integrated with GoogleTest. It empowers you to replace real objects with mock objects in your tests, controlling their behavior precisely and verifying interactions. This is especially useful when:
-
-- The real objects are difficult to set up, slow, or cause flakiness.
-- You want to focus tests on specific behaviors or sequences of calls.
-- You need to simulate error conditions or specific responses from dependencies.
+GoogleMock extends GoogleTest by providing tools for **mocking** — the process of creating mock objects that simulate the behavior of complex, real objects or dependencies.
 
 Key features of GoogleMock include:
 
-- **Declarative Mock Definitions:** Use `MOCK_METHOD` macros to define mock methods in derived classes easily.
-- **Matchers:** Express flexible argument expectations using built-in or custom matchers (e.g., matching values, ranges, properties).
-- **Expectations and Cardinalities:** Specify how many times and in what order methods are called (`EXPECT_CALL`, `Times`, `InSequence`).
-- **Actions:** Define what mocks do when called (`Return`, `Invoke`, `SetArgPointee`, etc.), including chaining multiple actions.
-- **Strictness Modes:** Control how uninteresting calls are treated using `NiceMock` (ignore warnings), `NaggyMock` (warn by default), and `StrictMock` (fail tests on uninteresting calls).
-- **Support for Mocking Complex C++ Features:** Handle overloaded functions, virtual and non-virtual methods, move-only types, templates, and more.
-- **Delegation Patterns:** Easily delegate default behavior to fakes or real objects.
+- An intuitive and readable Domain-Specific Language (DSL) using macros to define mock classes and methods.
+- Automatic generation of mock method implementations through macros like `MOCK_METHOD`.
+- Rich argument matching via built-in and custom _matchers_ to specify which calls and parameters are expected.
+- Detailed control over mock method invocation counts (`Times`), call order (`InSequence`, `After`), and behavior (`WillOnce`, `WillRepeatedly`).
+- Verification of expectation fulfillment automatically at mock object destruction.
+- Support for mocking virtual methods, including overloaded and templated methods.
+- Wrappers like `NiceMock`, `NaggyMock`, and `StrictMock` that control warning and failure behavior for unexpected or uninteresting calls.
 
-GoogleMock helps achieve highly controllable, interaction-based testing.
+**Use Case**: When testing a component that interacts with external systems, dependencies, or collaborators, GoogleMock allows you to isolate the component's behavior by mocking those dependencies, specifying expected interactions, and validating the precise usage.
 
----
 
 ## Why Use GoogleTest and GoogleMock Together?
 
-The integration of GoogleMock within GoogleTest makes it seamless to:
+Testing complex C++ applications demands both **verification of outputs** and **control over interactions**. GoogleTest handles the former with its assertion suite and test lifecycle, while GoogleMock specializes in the latter through sophisticated mocking capabilities.
 
-- Define mocks and write tests in the same framework.
-- Leverage GoogleTest's assertions and discovery while controlling dependencies with mocks.
-- Run verification automatically when mocks are destructed, catching failures early.
-- Configure how mocks behave in terms of strictness and interaction verification.
+Together, they empower developers to:
 
-By using both, you can write maintainable tests that are fast, reliable, expressive, and reflective of real usage patterns.
+- Write explicit, intention-revealing unit and interaction tests.
+- Mock dependencies to reduce test fragility and execution time.
+- Experiment with designs early by prototyping interfaces and behaviors.
+- Detect and diagnose behavioral contract violations during test runs.
 
----
 
-## When Should You Use These Tools?
+## Core Features Overview
 
-- **GoogleTest Alone:** For general unit tests that do not depend heavily on external dependencies or require interaction verification.
-- **GoogleMock:** When you have dependencies or collaborators that need to be simulated or monitored precisely.
-- **Both Together:** For comprehensive tests that require not just asserting state, but also verifying the behavior and interaction contracts of components.
+### GoogleTest
 
----
+- Simple test declaration macros: `TEST` and `TEST_F`.
+- Rich assertions including boolean checks, value comparisons, string, floating-point, exception testing, and death tests.
+- Support for predicate and matcher-based assertions for expressive code validation.
+- Parameterized and typed tests to reduce repetitive code.
+- Detailed failure diagnostics with custom messages.
 
-## Getting Started
+### GoogleMock
 
-To get started quickly:
+- `MOCK_METHOD` macro for concise mock class definition.
+- `EXPECT_CALL` macro to specify expected method invocations precisely.
+- Argument matchers to flexibly specify expected call parameters.
+- Support for sequences and partial ordering to control call expectations.
+- Management of uninteresting calls via mock wrapper classes.
+- Default action specification via `ON_CALL` for controlling substitute method behavior.
+- Support for move-only types, reference qualifiers, calling conventions, and overloaded virtual methods.
 
-1. Write your first GoogleTest test suite using `TEST()` or `TEST_F()`. See [Writing and Running Your First Test](../getting-started/gs-configuration-first-test/gs-first-test.md).
-2. Define basic mocks using `MOCK_METHOD` macros. Check [Creating and Using Basic Mocks](../guides/mocking-scenarios/creating-basic-mocks.md).
-3. Specify expectations on mock objects using `EXPECT_CALL` and customize behavior with actions and matchers.
-4. Use strictness modes (`NiceMock`, `StrictMock`) to control warnings and errors for uninteresting calls.
 
----
+## Who Should Use These Frameworks?
 
-## Practical Example
+- **Beginners in C++ testing** will find GoogleTest straightforward to start with, thanks to its simple macros and assertion model.
+- **Developers needing interaction-based testing** will benefit from GoogleMock to test collaborations between objects.
+- Teams adopting **Test-Driven Development (TDD)** and **Continuous Integration** will leverage these tools to write effective automated tests that catch regressions early.
+
+
+## Basic User Workflow Example
 
 ```cpp
+#include <gtest/gtest.h>
 #include <gmock/gmock.h>
 
+using ::testing::Return;
+
+// An interface to be mocked
 class Turtle {
  public:
-  virtual ~Turtle() {}
-  virtual void PenUp() = 0;
+  virtual ~Turtle() = default;
   virtual void PenDown() = 0;
-  virtual void Forward(int distance) = 0;
+  virtual int GetX() const = 0;
 };
 
+// A mock class
 class MockTurtle : public Turtle {
  public:
-  MOCK_METHOD(void, PenUp, (), (override));
   MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, Forward, (int distance), (override));
+  MOCK_METHOD(int, GetX, (), (const, override));
 };
 
-TEST(PaintTest, DrawLine) {
-  using ::testing::AtLeast;
+// Code under test
+void DrawSquare(Turtle* turtle) {
+  turtle->PenDown();
+  // ...some drawing...
+}
+
+TEST(DrawTest, SquareCallsPenDown) {
   MockTurtle turtle;
+  EXPECT_CALL(turtle, PenDown()).Times(1);
 
-  EXPECT_CALL(turtle, PenDown()).Times(AtLeast(1));
-  EXPECT_CALL(turtle, Forward(100));
-
-  // Code under test goes here, exercising MockTurtle.
+  DrawSquare(&turtle);
 }
 ```
 
----
+This simple example uses GoogleMock to verify that `PenDown()` is called exactly once during `DrawSquare`.
 
-## Common Pitfalls and Best Practices
 
-- Always set expectations before exercising the mock object; otherwise, behavior is undefined.
-- Prefer `ON_CALL` for defining default behavior, reserve `EXPECT_CALL` for verification needs.
-- Avoid over-specifying calls which leads to brittle tests; specify only what matters.
-- Use `NiceMock` to suppress warnings on uninteresting calls if you don't care about all calls.
-- Use sequences (`InSequence`) for specifying call order requirements.
-- Mock only interfaces or abstract types if possible; avoid mocking concrete classes to reduce brittleness.
-- Be mindful of mock destructors and explicit verification calls if mocks are heap-allocated.
+## Additional Practical Tips
 
----
+- **Define mock classes where you own the interface** to keep mocks in sync with the real interface.
+- Use `ON_CALL` to set default mock method behavior without requiring call count restrictions.
+- Use `NiceMock` to suppress uninteresting call warnings when you don’t care about some mock methods.
+- Use `StrictMock` when you want to treat uninteresting calls as errors.
+- Always specify expectations *before* the code under test executes to enable early detection of failures.
+- Use sequences (`InSequence`) or `After` clauses to constrain the order of expected calls where order matters.
+- Use matchers like `_` (wildcard) to avoid brittle and over-specific argument expectations.
 
-## Summary and Next Steps
 
-This page has outlined the purpose and value of GoogleTest and GoogleMock, their key features, and usage scenarios. To deepen your mastery, explore these next resources:
+## Common Benefits Summarized
 
-- [Mocking Basics with GoogleMock](../getting-started/gs-configuration-first-test/gs-mock-first-steps.md)
-- [GoogleMock Strictness Modes](../api-reference/mocking-apis/strictness-modes.md)
-- [Matchers Reference](../api-reference/matcher-actions/matcher-reference.md)
-- [GoogleTest Primer](../overview/introduction-getting-started/what-is-googletest.md)
+- **Test Reliability:** By mocking dependencies, tests become faster and less flaky.
+- **Clear Specification:** Expectations act as a precise specification of interactions.
+- **Early Bug Detection:** Failures occur immediately when deviations happen in behavior.
+- **Design Flexibility:** Facilitate prototyping and refactoring by isolating interfaces.
 
-Together, these pages will enable you to effectively architect tests, handle complex dependencies, and achieve high confidence in your C++ code quality.
-
----
 
 ## Related Documentation
 
-- [Core Features & Capabilities](../overview/introduction-getting-started/core-features.md)
-- [Creating and Using Mock Objects](../guides/mocking-scenarios/creating-basic-mocks.md)
-- [Mock Strictness: Nice, Naggy, and Strict](../guides/mocking-scenarios/mock-strictness-best-practices.md)
-- [Mocking Reference and API](../api-reference/mocking-apis/mock-object-basics.md)
-- [Matchers and Actions API](../api-reference/matcher-actions/matcher-reference.md)
+- [Getting Started with GoogleTest & GoogleMock](../guides/getting-started/setup-installation.md)
+- [Mocking Reference](../api-reference/mocking/mock-objects.md)
+- [Matchers Reference](../api-reference/advanced-testing/matchers.md)
+- [Assertions Reference](../api-reference/core-apis/assertions.md)
+- [gMock Cookbook](../docs/gmock_cook_book.md)
+
+
+## Next Steps
+
+- Explore how to *install and integrate* GoogleTest and GoogleMock in your C++ project.
+- Learn how to *author your first test* and *mock* using concrete examples.
+- Understand *assertions and matchers* for effective outcome validation.
+- Delve into *advanced mocking patterns* and *best practices* to scale testing in large projects.
+
 
 ---
 
-## External Resources
-
-- [GoogleTest GitHub Repository](https://github.com/google/googletest)
-- [gMock for Dummies Guide](https://google.github.io/googletest/gmock_for_dummies.html)
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
-- [GoogleTest Primer User Guide](../docs/primer.md)
-
----
-
-## Troubleshooting
-
-If you encounter issues:
-
-- Validate your setup and environment with [System Requirements & Supported Platforms](../getting-started/gs-prerequisites-installation/gs-system-requirements.md).
-- Check [Troubleshooting Common Setup Issues](../getting-started/gs-validation-troubleshooting/gs-troubleshooting-common-issues.md).
-- Use the verbose logging flag `--gmock_verbose=info` to get detailed logs on mock interactions.
-
----
-
-## Tips
-
-- Use mock strictness modes thoughtfully: `NiceMock` for general use, `NaggyMock` for debugging, and `StrictMock` when you want to enforce interactions.
-- Delegate to fakes or real objects when you want mock behavior combined with realistic implementations.
-- Employ matchers to express flexible argument constraints rather than hardcoding values.
-
----
-
-By adopting GoogleTest and GoogleMock together, you dramatically increase your ability to write clear, accurate tests that empower confidence and reduce bugs in your C++ software development lifecycle.
+<Tip>
+This overview page provides the essential understanding you need to start using GoogleTest and GoogleMock effectively. For practical application, continue to the Getting Started and Guides sections.
+</Tip>
