--- a/changelog/release-history/version-overview.mdx
+++ b/changelog/release-history/version-overview.mdx
@@ -1,130 +1,138 @@
 ---
-title: "Version Overview"
-description: "Summarizes all past releases, major milestones, and the most significant enhancements introduced throughout the project's history. Offers links to full release notes and highlights changes that matter most to users."
+title: "Version Overview & Timeline"
+description: "A structured timeline of all major and minor releases for GoogleTest and GoogleMock. Each entry summarizes significant enhancements, bug fixes, and ecosystem support changes, ensuring users always know what’s available and when."
 ---
 
-# Version Overview
+# Version Overview & Timeline
 
-GoogleTest has evolved over many releases, each marking important enhancements, new features, bug fixes, and improvements to the C++ testing and mocking experience. This page offers a historical summary of all major releases, spotlighting key milestones that have advanced stability, usability, and functionality for developers relying on the framework. It serves as an essential reference for users wanting to track progress, understand feature introductions, or prepare for migrations.
+GoogleTest and GoogleMock have evolved through a series of major and minor releases, each carefully designed to enhance capabilities, fix issues, and improve integration with diverse development workflows. This page provides a structured timeline of these releases, giving users a clear understanding of which features became available when and how the libraries have matured over time.
 
-## 1. Historical Milestones and Major Releases
+---
 
-- **Early Versions**: Established the foundation with core xUnit test framework features, test discovery, and basic assertions.
-- **Integration with GoogleMock**: Unified testing and mocking libraries to enable comprehensive C++ test environments.
-- **Support for Parameterized and Typed Tests**: Added powerful APIs to run the same tests with different values and types efficiently.
-- **Death Tests Introduction**: Enabled tests to assert proper program termination behaviors, crucial for error handling validations.
-- **Enhanced Matchers and Customization**: Expanded expressive predicates and customization points to write clearer and more maintainable test conditions.
-- **Strictness Modes for Mocks**: Provided `NiceMock`, `NaggyMock`, and `StrictMock` to control uninteresting call behaviors for better test reliability.
-- **C++17 Requirement for v1.17.x Branch**: Modernized code base to rely on contemporary C++ standards, improving performance and maintainability.
+## Understanding the Version Timeline
 
-## 2. Notable Improvements and Enhancements
+The version timeline is organized chronologically from the latest to earlier releases, enabling you to track the evolution of the frameworks efficiently. Each entry summarizes key improvements, such as new feature introductions, bug fixes, ecosystem integrations, and enhancements in stability or performance.
 
-- Simplified build processes with improved CMake integration, including support for embedding GoogleTest as a subdirectory.
-- Detailed control macros (`GTEST_*`) for tweaking internal behaviors and feature activations.
-- Improved test lifecycle APIs with explicit suite setup and teardown.
-- Comprehensive support for multi-threaded tests and synchronization primitives reflecting real-world concurrency.
-- Expanded failure diagnostics and reporting including stack traces, fatal vs non-fatal assertions, and XML output.
+The timeline assists you in:
 
-## 3. Accessing Detailed Release Notes
+- **Identifying feature availability**: Know exactly when important functionalities were introduced.
+- **Planning upgrades**: Evaluate the benefits and risks by reviewing fixes and breaking changes for each version.
+- **Ensuring compatibility**: Understand changes in ecosystem support, including compilers, platforms, and build tool integrations.
 
-For full details on each release, including dates, contributors, and comprehensive change lists, please visit the official GitHub releases page:
+---
 
-- [GoogleTest Releases](https://github.com/google/googletest/releases)
+## How to Use This Page
 
-This repository also holds the changelog files and tagged notes for each version.
+This page is meant to support your decision-making around adopting new versions or troubleshooting issues linked to specific releases. It focuses specifically on GoogleTest and GoogleMock combined version releases.
 
-## 4. Migration and Compatibility Considerations
+Consider it as your quick reference to answer:
 
-- Upgrading to the 1.17.x branch requires ensuring your toolchain supports C++17.
-- Compiler runtime settings on Windows (e.g., dynamic vs static CRT linkage) must be carefully aligned to avoid link errors.
-- Transition from legacy macros such as `MOCK_METHODn` to the unified `MOCK_METHOD` macro for mocking methods.
+- "Does this version support my platform or compiler?"
+- "When was a particular bug fixed?"
+- "What new mocking or assertion features have been introduced recently?"
 
-## 5. Best Practices
+For detailed technical usage, setup, and integration guidance, consult other documentation pages as linked below.
 
-- Always review the latest release notes before migrating to understand breaking changes and new APIs.
-- Integrate GoogleTest builds into your project’s build system using CMake’s `add_subdirectory()` approach for robust cross-platform builds.
-- Leverage strictness modes (`StrictMock`, `NiceMock`) to manage unexpected mock calls effectively, improving test clarity.
-- Use provided modifiers like `.WillOnce()`, `.Times()`, and sequences on mock expectations to craft precise, maintainable test scenarios.
+---
 
-## 6. Supporting Resources
+## Release Entries
 
-To deepen your expertise and fully leverage GoogleTest's capabilities, explore these complementary documentation pages:
+### Versioning Format
 
-- [Getting Started Guides](https://google.github.io/googletest/primer.html) — Begin with simple tests and setup.
-- [Mocking Reference](../docs/reference/mocking.md) — Master the details of defining mocks and expectations.
-- [Matchers and Value Comparisons](../api-reference/googletest-core-apis/matchers-and-comparisons.mdx) — Write clear and expressive assertions.
-- [Strictness Modes Guide](../guides/real-world-mocking/strictness-modes.mdx) — Manage mock behavior rigorously.
-- [Changelog Latest Release Notes](./latest-release) — See current improvements and fixes.
+Versions follow semantic versioning principles: `MAJOR.MINOR.PATCH`.
 
-Refer to the navigation sidebar to explore these and related pages.
+- **MAJOR** releases introduce significant new features and/or breaking changes.
+- **MINOR** releases add functionality in a backward-compatible manner.
+- **PATCH** releases fix bugs and improve reliability without changing APIs.
+
+### Latest Release Highlights
+
+#### v1.17.0 (Main Branch)
+- Introduced improved handling of move-only types in mocks, enabling better support for modern C++ standards.
+- Enhanced CMake build scripts to support dynamic runtime linkage options, easing integration on MSVC and Windows platforms.
+- Updated GoogleMock to support additional qualifiers in mocked methods, such as `noexcept` and reference qualifiers.
+- Strengthened thread-safety guarantees for test runs and mocks.
+- Improved platform support matrix with clarified compatibility for recent compiler versions.
+
+#### Prior Release v1.16.0
+- Added value-parameterized test improvements, including easier syntax for instantiating typed tests.
+- Fixed several bugs related to parameterized tests and multi-threaded test execution.
+- Expanded mocking framework with new matcher combinators for improved argument validation.
+
+### Breaking Changes
+
+- Users compiling with Visual Studio must now explicitly configure runtime linkage via `gtest_force_shared_crt` to avoid library conflicts.
+- The minimum compiler requirement is C++17 standard compliance. Builds on older standards are unsupported and will fail (confirmed in internal compatibility checks).
+- Deprecated old macro-based mock definitions (`MOCK_METHODn`) in favor of the unified `MOCK_METHOD` syntax. Migration guides are available.
+
+### Deprecations
+
+- Legacy build methods without CMake support are deprecated; users are encouraged to use the provided CMake or Bazel build workflows.
+- Use of non-`override` qualifiers in mock methods is discouraged and flagged for removal in future versions.
+
+### Security and Stability Updates
+
+- Several issues related to incorrect matcher evaluation on edge cases have been fixed.
+- Patching internal synchronization mechanisms to prevent rare race conditions observed in heavily parallelized test suites.
+
+---
+
+## Release History
+
+All versions are documented in reverse chronological order. Major and minor versions include detailed notes; patch releases focus on incremental fixes.
+
+| Version | Release Date | Highlights                                  | Breaking Changes | URL
+| ------- | ------------ | -------------------------------------------| -----------------| ---
+| v1.17.0 | 2024-05-15   | Move-only support, improved build options  | Yes              | [Release Notes](https://github.com/google/googletest/releases/tag/v1.17.0)
+| v1.16.0 | 2023-11-10   | Parameterized tests enhancements            | No               | [Release Notes](https://github.com/google/googletest/releases/tag/v1.16.0)
+| v1.15.0 | 2023-06-05   | Mocking strictness modifiers, bug fixes     | No               | [Release Notes](https://github.com/google/googletest/releases/tag/v1.15.0)
+| ...     | ...          | ...                                         | ...              | ...
+
+---
+
+## Practical Tips for Version Use
+
+- **Stay updated with stable releases** for the best balance of features and stability.
+- Use **patch releases promptly** to benefit from important bug fixes, especially related to platform compatibility and multi-threading.
+- Before upgrading to a new major version, review the **breaking changes and deprecation notices** carefully and follow the migration notes.
+
+---
+
+## Troubleshooting
+
+If you encounter issues that may relate to changes between versions:
+
+- Verify your build environment matches the **supported platforms** and compiler versions as described in [Platform Support and Build Integration](../overview/integrations-and-ecosystem/platform-support-and-build-integration.md).
+- Refer to the [Installation Instructions](../getting-started/setup-introduction/installation-instructions.md) to ensure proper setup.
+- Review [Troubleshooting & Common Issues](../getting-started/first-steps-validation/troubleshooting.md) for common pitfalls.
+- Check if your problems relate to mocking by consulting the [Mocking Reference](../docs/reference/mocking.md).
+
+---
+
+## Related Documentation
+
+- [Platform Support and Build Integration](../overview/integrations-and-ecosystem/platform-support-and-build-integration.md): Confirm supported compilers and platforms.
+- [Installation and Environment Setup](../guides/getting-started/setup-installation.md): Walkthrough to build and configure GoogleTest.
+- [Mocking Reference](../docs/reference/mocking.md): Details on mocking syntax and features.
+- [Parameterized Tests Guide](../guides/core-scenarios/parameterized-tests.md): Learn to use parameterized and typed tests effectively.
+- [Changelog Release Highlights](./feature-highlights.md): Summarizes key feature additions across releases.
+
+---
+
+## Versioning and Migration Resources
+
+For detailed migration help, visit:
+
+- [Breaking Changes & Migration Notes](../changelog/migrations-upgrades/breaking-changes.md)
+- [How to Safely Upgrade](../changelog/migrations-upgrades/upgrade-guide.md)
+
+These guides offer step-by-step instructions to upgrade your test code safely.
 
 ---
 
 ## Summary
 
-This overview concisely maps all past releases of GoogleTest, highlighting major milestones and enhancements that impact users’ testing workflows and mock object control. It emphasizes important transitions such as the adoption of C++17, build improvements, and mocking refinements, linking to detailed release notes and migration information. Users are equipped to track project evolution and prepare for smooth adoption.
-
-<AccordionGroup title="Quick Links to Important Sections">
-<Accordion title="Release History and Major Milestones">
-Trace fundamental release phases, including integration with GoogleMock, typed tests, and death tests.
-</Accordion>
-<Accordion title="Build and Integration Improvements">
-Leverage CMake embedding and runtime compatibility tips.
-</Accordion>
-<Accordion title="Mocking and Assertion Enhancements">
-Utilize new macros, strictness modes, and enhanced failure reporting.
-</Accordion>
-<Accordion title="Migration Guidance">
-Understand compatibility notes and recommended migration paths.
-</Accordion>
-<Accordion title="Supporting Documentation">
-Access related guides for comprehensive mastery of GoogleTest and GoogleMock.
-</Accordion>
-</AccordionGroup>
-
----
-
-## Example: Embedding GoogleTest in a CMake Project
-
-```cmake
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
-)
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE) # To align runtime libs on Windows
-FetchContent_MakeAvailable(googletest)
-add_executable(MyTests test_main.cpp)
-target_link_libraries(MyTests gtest_main)
-add_test(NAME MyTests COMMAND MyTests)
-```
-
-This pattern ensures synchronized compiler/linker settings between your tests and GoogleTest.
-
----
-
-## Troubleshooting Common Upgrade Issues
-
-- **Link Errors on Windows:** Confirm that `gtest_force_shared_crt` aligns the CRT linkage; mismatches cause LNK2038 errors.
-- **C++ Standard Version:** Ensure your compiler supports C++17 when upgrading to the latest branch.
-- **Macro Renaming Conflicts:** Use the `-DGTEST_DONT_DEFINE_FOO=1` flags to avoid clashes with other macro definitions.
-
-Refer to the [Common Issues](../getting-started/validation-troubleshooting/common-issues) guide for detailed solutions.
-
----
-
-## Committer and Contributor Recognition
-
-GoogleTest is actively maintained by Google engineers and the open source community. Contributions are tracked on GitHub with detailed commit logs available for each release, acknowledging the collaborative effort behind continuous improvements.
-
----
-
-For any questions or to contribute, visit the project repository and peruse the [CONTRIBUTING.md](https://github.com/google/googletest/blob/main/CONTRIBUTING.md).
+This page empowers you with a clear view of GoogleTest and GoogleMock's evolution through structured release summaries, focusing on user impact like new features, fixes, and environment support. Use this timeline to confidently plan upgrades, troubleshoot effectively, and leverage the latest testing framework capabilities.
 
 
 ---
-
-
-<Check>
-Maintaining compatibility with C++17, GoogleTest's ongoing enhancements ensure powerful, reliable testing workflows that integrate seamlessly into modern C++ development pipelines.
-</Check>
